update about me

--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
       <div class="extras-container">
         <div class="extras-section extras-section-floats">
           <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a>
-           One of my best experience as a web developer has been working at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> with a team of full-stack engineers to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to their <a class="text-link" href="https://theymim.org">website</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
+           One of my best experience as a developer was working at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> with a team of full-stack engineers to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to their <a class="text-link" href="https://theymim.org">website</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
            <br><br>
         </div>
 
         <div class="extras-section extras-section-floats">
           <!-- <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a> -->
           <img class="nu-logo" src="assets/images/northwestern.png" />
-           Currently, I'm completing Northwestern's Data Science and Visualization bootcamp, which is an immersive 6-month program that focuses on the practical technical skills needed to analyze and communicate insights gained from the collection of data. We're covering everything from advanced Excel and <a class="text-link" href="https://github.com/scottgall/The-VBA-of-Wall-Street">VBA scripting</a>, to processing large data sets with tools like Hadoop, and even diving into some Machine Learning. I'm currently loving learning Python and its vast ecosystem of libraries, frameworks, and tools. I'm really excited to be able to gain truths from data and tell stories through visualizations that can have an impact on organizations and their decision making process.
+           I'm currently in Northwestern's Data Science and Visualization bootcamp, an immersive 6-month program that focuses on the practical technical skills needed to analyze and communicate insights gained from data. We're covering everything from advanced Excel and <a class="text-link" href="https://github.com/scottgall/The-VBA-of-Wall-Street">VBA scripting</a>, to processing large data sets with tools like Hadoop, and even diving into some Machine Learning. I'm currently loving learning Python and its vast ecosystem of libraries, frameworks, and tools. I'm really excited to be able to gain truths from data and tell stories through visualizations that can have an impact on organizations and their decision making process.
            <br><br>
         </div>
       
         <div class="extras-section">
           <a class="" href="https://www.youtube.com/watch?v=NQpKEpVTo1M&t=11s"><img class="skate" src="assets/images/skate.jpg" /></a>
-          I love cheese, podcasts, bike-share systems, and cooking with my boyfriend. I also love animals and hope to be a first-time dog dad in in the near future 🤞. My greatest passion in life, however, is skateboarding. Just like with coding, there's always something new to learn and there's more than often a ton of trial and error involved in landing a trick or getting a program to run correctly. Check out some of my skate <a class="text-link videos-link" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber">videos</a>!
+          I love cheese, bike-share systems, Buffy the Vampire Slayer, and cooking with my boyfriend. I also love animals and hope to be a first-time dog dad in in the near future 🤞. My biggest hobby is skateboarding. Just like with coding, there's always something new to learn and there's more than often a ton of trial and error involved in landing a trick or getting a program to run correctly. Check out some of my skate <a class="text-link videos-link" href="https://www.youtube.com/user/SagSagUsername/videos?view_as=subscriber">videos</a>!
         </div>
       </div>
       <div class="footer-container">
