--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
       <div class="extras-container">
         <div class="extras-section extras-section-floats">
           <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a>
-           One of my best experience as a developer was working at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> with a team of full-stack engineers to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to their <a class="text-link" href="https://theymim.org">website</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
+           My most rewarding experience as a developer was working at <a class="text-link" href="https://www.thedifferenceengine.io/">The Difference Engine</a> with a team of full-stack engineers to <a class="text-link" href="https://github.com/the-difference-engine/ymim">build</a> a custom CMS in React & Django for a local non-profit, Young Masterbuilders in Motion (YMIM). Head over to their <a class="text-link" href="https://theymim.org">website</a> to see how YMIM inspires, connects, and empowers young women orphans, adoptees, and foster youth alumnae.
            <br><br>
         </div>
 
         <div class="extras-section extras-section-floats">
           <!-- <a class="tde-logo" href="https://www.thedifferenceengine.io/"><img class="tde-logo" src="assets/images/tde.png" /></a> -->
           <img class="nu-logo" src="assets/images/northwestern.png" />
-           I'm currently in Northwestern's Data Science and Visualization bootcamp, an immersive 6-month program that focuses on the practical technical skills needed to analyze and communicate insights gained from data. We're covering everything from advanced Excel and <a class="text-link" href="https://github.com/scottgall/The-VBA-of-Wall-Street">VBA scripting</a>, to processing large data sets with tools like Hadoop, and even diving into some Machine Learning. I'm currently loving learning Python and its vast ecosystem of libraries, frameworks, and tools. I'm really excited to be able to gain truths from data and tell stories through visualizations that can have an impact on organizations and their decision making process.
+           I'm currently in Northwestern's Data Science and Visualization bootcamp, an immersive 6-month program that focuses on the practical technical skills needed to analyze and communicate insights gained from data. We're covering everything from advanced Excel and <a class="text-link" href="https://github.com/scottgall/The-VBA-of-Wall-Street">VBA scripting</a>, to processing large data sets with tools like Hadoop, and even diving into some Machine Learning. I'm currently loving learning <a class="text-link" href="https://github.com/scottgall/python-challenge">Python</a> and its vast ecosystem of libraries, frameworks, and tools. I'm really excited to be able to gain truths from data and tell stories through visualizations that can have an impact on organizations and their decision making process.
            <br><br>
         </div>
       
